Changelog
=========



* Flowplayer updated to 3.1.4; modules updated to the latest versions
  [naro]

3.0b4 - 2009-10-05
------------------ 

* Depend on plone.app.jquerytools: plone.app.jqtools was renamed and the
  package removed, so new installations would break.
  [optilude]

* use IFileContent instead of IATFile to be able to handle ATBlob as well.

* added empty upgrade step for such version changes which does not require any
  upgrade. This is not apparently good solution.
  [naro]

3.0b3 - 2009-09-26
------------------

* URL passed to flowplayer must end with known media suffix (flv, mp3, mp4
  etc.). URL http://portal/folder/myvideo is not valid source for
  Flowplayer, but http://portal/folder/myvideo?e=.flv is.
  Thanks to Milos Prudek for pointing to this issue.
  [naro]

3.0b2 - 2009-09-16
------------------

* added missing plone.app.jqtools zcml include
  [naro]

* It is possible to specify flash parameters using param/... properties.
  'player' property were changed to 'param/src'. This may be used for setting
  eg. param/wmode to 'opaque'.
  [naro]


3.0b1 - 2009-09-15
------------------

* Updated to flowplayer3 - Please read Upgrade notes and Readme

* new option showPlaylist toggles horizontal playlist below the player in the
  folder/collection view mode. Images and styles are taken from this example:
  http://flowplayer.org/demos/plugins/javascript/playlist/horizontal.htm

1.0b5 - 2009-03-18
------------------

* Have the event handlers make sure they're working with an object from a
  site where collective.flowplayer is installed.
  [davisagli]

1.0b4 - 2009-03-06
------------------

* Move the Plone dependency into the buildout to avoid the problem
  reported in
  http://david.wglick.org/2009/heads-up-watch-out-for-dependencies-on-plone/

1.0b3 - 2009-02-23
------------------

* Added support for links

* Added test coverage

1.0b2 - Released September 9th, 2008
------------------------------------
